# Issue-Solver

./: .env.example  .gitignore  LICENSE  README.md  config.py  pyproject.toml
.github/workflows/: ci.yml
agents/: coder.py  coordinator.py  explorer.py  reviewer.py
cli/: commands.py
docs/: issue-to-solution-architecture.md  issue-to-solution-implementation-plan.md  project-overview.md  workflow.md
evaluation/: benchmark.md  results.md  tests.md
example/: README.md
example/search-demo/: .gitignore  ISSUE.md  README.md  pyproject.toml
example/search-demo/src/search_demo/: __init__.py  __main__.py  cli.py  search.py
example/search-demo/tests/: test_cli.py  test_search.py
graph/: state.py
nodes/: coordinator.py  explore.py  initialize.py  parse_issue.py  test.py
prompts/: coder.py  coordinator.py  explorer.py  issue_parser.py  reviewer.py
schemas/: coding_result.py  coding_task.py  environment_info.py  explore_report.py  review_result.py  test_result.py
services/: artifacts.py  issue_loader.py  project_detector.py  python_environment.py  structured_output.py  test_executor.py
src/: config.py
src/agents/: coder.py  coordinator.py  explorer.py  read_tools.py  reporter.py  reviewer.py
src/cli/: arguments.py  commands.py  main.py  report.py  rich_terminal.py  run.py  terminal.py
src/graph/: builder.py  routing.py  state.py
src/nodes/: coding.py  coordinator.py  explore.py  finalize.py  initialize.py  parse_issue.py  review.py  test.py
src/prompts/: coder.py  coordinator.py  explorer.py  (+3 more)
tests/: conftest.py  test_artifacts.py  test_cli_arguments.py  test_cli_commands.py  test_cli_main.py  test_cli_report.py  test_cli_rich_terminal.py  test_cli_run.py  test_cli_terminal.py  test_coder_agent.py  test_coding_node.py  test_coding_tools.py  test_coordinator.py  test_deepseek_model.py  test_explore_node.py  test_explorer_agent.py  test_finalize_node.py  test_foundation.py  test_git_tools.py  test_graph_builder.py  test_initialize_node.py  test_issue_loader.py  test_openai_compatible_model.py  test_parse_issue_node.py  test_project_detector.py  test_python_environment.py  test_read_tools.py  test_report.py  test_reporter_agent.py  test_repository.py  test_review_node.py  test_reviewer_agent.py  test_routing.py  test_schemas_and_state.py  test_search_tools.py  test_structured_output.py  test_test_executor.py  test_test_node.py  test_token_usage.py  test_tool_history.py
tools/: filesystem.py  git.py  search.py
(+33 files in other folders)
