[project]
name = "issue-solver"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.14",
    "langchain-deepseek>=1.1.0",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "ulid-py>=1.1.0",
]

[project.scripts]
issue-solver = "cli.main:global_main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "agents",
    "cli",
    "graph",
    "nodes",
    "prompts",
    "schemas",
    "services",
    "tools",
    "tools.coding",
]
py-modules = ["config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
