[project]
name = "issue-solver"
version = "0.1.0"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.14",
    "langchain-openai>=1.1.10",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "ulid-py>=1.1.0",
]

[project.scripts]
issue-solver = "cli.main:global_main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "agents",
    "cli",
    "graph",
    "nodes",
    "prompts",
    "schemas",
    "services",
    "tools",
    "tools.coding",
]
py-modules = ["config"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"tests/test_graph_builder.py" = ["E731"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "basic"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]
