[project]
name = "search-demo"
version = "0.1.0"
description = "用于验证 issue-solver 的最小完整搜索项目"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
search-demo = "search_demo.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["search_demo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
